add make and install scripts and change .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,36 @@
 *.exe
 *.out
 *.app
+
+*.cmake
+Makefile
+out/
+
+CMakeCache.txt
+CMakeFiles/
+CPackConfig.cmake
+examples/CMakeFiles/
+examples/mysql_affected_rows
+examples/mysql_debug
+examples/test_output
+include/my_config.h
+include/mysql_version.h
+install_manifest.txt
+mysql_config/mysql_config.c
+mysql_config/mariadb_config
+
+unittest/libmysql/basic-t
+unittest/libmysql/charset
+unittest/libmysql/connection
+unittest/libmysql/cursor
+unittest/libmysql/errors
+unittest/libmysql/fetch
+unittest/libmysql/logs
+unittest/libmysql/misc
+unittest/libmysql/ps
+unittest/libmysql/ps_bugs
+unittest/libmysql/result
+unittest/libmysql/sp
+unittest/libmysql/ssl
+unittest/libmysql/view
+
